--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.0",
     "tailwindcss": "^3.4.13",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4" 
+    
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "engines": {
+  "node": "16.x"
+}
+
 }
